# ai-dial-adapter-bedrock

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  Dockerfile  Dockerfile.test  MODEL_CARD.md  Makefile  README.md  SECURITY.md  app.py  bedrock.py  build.sh  client.py  debug_app.py  install.sh  local_client_ai21.py  local_client_custom.py  local_client_langchain.py  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  server.py  test_app.py
.github/workflows/: deploy_dev.yml  release.yml
aidial_adapter_bedrock/: app.py  aws_client_config.py  bedrock.py  chat_completion.py  deployments.py  embeddings.py
aidial_adapter_bedrock/dial_api/: attachment.py  auth.py  embedding_inputs.py  request.py  resource.py  response.py  storage.py
aidial_adapter_bedrock/embedding/: attachments.py  validation.py
aidial_adapter_bedrock/embedding/amazon/: base.py  response.py  titan_image.py  titan_text.py
aidial_adapter_bedrock/embedding/cohere/: embed_text.py  response.py
aidial_adapter_bedrock/embeddings/: amazon_titan_image.py  amazon_titan_text.py  embeddings_adapter.py  validation.py
aidial_adapter_bedrock/llm/: bedrock_adapter.py  bedrock_models.py  chat_emulator.py  chat_model.py  consumer.py  converse_adapter.py  errors.py  message.py  model_listing.py  tokenize.py  truncate_prompt.py
aidial_adapter_bedrock/llm/chat_emulation/: chat_emulator.py  claude.py  claude_chat.py  history.py  meta_chat.py  pseudo_chat.py  types.py  zero_memory.py  zero_memory_chat.py
aidial_adapter_bedrock/llm/model/: adapter.py  ai21.py  amazon.py  anthropic.py  cohere.py  conf.py  llama_chat.py  meta.py  stability.py
aidial_adapter_bedrock/llm/tools/: call_recognizer.py  claude.py  claude_emulator.py  claude_protocol.py  default_emulator.py  emulator.py  tool_config.py  tools_config.py
aidial_adapter_bedrock/llm/tools_emulation/: claude.py  emulator.py
aidial_adapter_bedrock/server/: exceptions.py
aidial_adapter_bedrock/universal_api/: request.py  response.py  token_usage.py
aidial_adapter_bedrock/utils/: concurrency.py  data_url.py  env.py  json.py  list.py  list_projection.py  log_config.py  pydantic.py  request.py  resource.py  stream.py  text.py  xml.py
bedrock-python-sdk/: boto3-1.26.142-py3-none-any.whl
chat_client/: custom.py  init.py  langchain.py
client/: adapter.py  bedrock.py  client_adapter.py  client_ai21.py  client_bedrock.py  conf.py  consumer.py  main.py
client/utils/: callback.py  cli.py  input.py
data/: prompt.py
dial-python-sdk/: aidial_sdk-0.0.1-py3-none-any.whl
helm/: development.yaml  review.yaml
llm/: bedrock.py  bedrock_adapter.py  bedrock_custom.py  bedrock_langchain.py  bedrock_models.py  chat_emulation.py  chat_model.py
llm/chat_emulation/: __init__.py  claude.py  meta_chat.py  zero_memory.py
open_ai/: response.py
open_ai_api/: types.py
scripts/: find_token_limits.py
server/: exceptions.py
test/: find_token_limits.py  run.sh
tests/: conftest.py  utils.py
tests/integration_tests/: test_chat_completion.py  test_embeddings.py  test_models.py
tests/locust/: app.py  run.sh
tests/unit_tests/: conftest.py  test_app.py  test_aws_client_config_factory.py  test_claude3_truncate_prompt.py  test_embedding_encoding.py  test_endpoints.py  test_stream.py  test_truncate_prompt.py
tests/unit_tests/chat_emulation/: test_claude_chat.py  test_claude_chat_history.py  (+7 more)
tests/utils/: callback.py  langchain.py  llm.py  messages.py  openai.py  server.py  string.py
universal_api/: request.py  response.py  token_usage.py
utils/: args.py  asyncio.py  cli.py  init.py  input.py  log_config.py  server.py
(+11 files in other folders)
