[tool.poetry]
name = "aidial-adapter-bedrock"
version = "0.2.0rc"
description = "DIAL adapter for AWS Bedrock"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-adapter-bedrock/"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
boto3 = "1.28.57"
botocore = "1.31.57"
aidial-sdk = "0.1.2"
anthropic = "0.2.10"
colorama = "0.4.4"
fastapi = "0.103.1"
flask = "2.3.2"
openai = "0.27.8"
uvicorn = "0.23.2"
pydantic = "1.10.12"

[tool.poetry.group.test.dependencies]
inquirer = "3.1.3"
prompt-toolkit = "3.0.38"
pytest-asyncio = "0.21.1"
pytest = "7.4.3"
python-dotenv = "1.0.0"
ai21 = {version = "1.2.2", extras = ["aws"]}
pytest-dotenv = "^0.5.2"

[tool.poetry.group.lint.dependencies]
pyright = "1.1.324"
black = "23.3.0"
isort = "5.12.0"
autoflake = "2.2.0"
flake8 = "6.0.0"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
langchain = "0.0.329"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv",
    "\\.nox",
]