[tool.poetry]
name = "aidial-adapter-bedrock"
version = "0.14.0rc"
description = "DIAL adapter for AWS Bedrock"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-adapter-bedrock/"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
boto3 = "1.28.57"
botocore = "1.31.57"
aidial-sdk = {version = "0.13.0", extras = ["telemetry"]}
anthropic = {version = "0.28.1", extras = ["bedrock"]}
fastapi = "0.109.2"
openai = "1.13.3"
uvicorn = "0.23.2"
pydantic = "1.10.13"
defusedxml = "^0.7.1"
numpy = "^2.0.0"
pillow = "^10.4.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "0.21.1"
pytest = "7.4.0"
python-dotenv = "1.0.0"
pytest-dotenv = "^0.5.2"
pytest-xdist = "^3.5.0"

[tool.poetry.group.lint.dependencies]
pyright = "1.1.324"
black = "24.3.0"
isort = "5.12.0"
autoflake = "2.2.0"
flake8 = "6.0.0"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
# muting warnings coming from opentelemetry package
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.instrumentation.dependencies"
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv",
    "\\.nox",
]